--- a/try2-js/package.json
+++ b/try2-js/package.json
@@ -1,9 +1,10 @@
 {
   "scripts": {
     "build": "rm -rf public && mkdir public && ./build.sh && npm run build-js",
-		"build-js": "esbuild src/index.js --bundle --outfile=./public/index.js"
+    "build-js": "esbuild src/index.js --bundle --outfile=./public/index.js"
   },
   "dependencies": {
-    "esbuild": "^0.11.5"
+    "esbuild": "^0.11.5",
+    "phaser": "^3.54.0"
   }
 }
