--- a/try2-js/package.json
+++ b/try2-js/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "build": "rm -rf public && mkdir public && ./build.sh && npm run build-js",
-    "build-js": "esbuild src/index.js --bundle --outfile=./public/index.js"
+    "build-js": "esbuild src/index.js --sourcemap --bundle --outfile=./public/index.js"
   },
   "dependencies": {
     "esbuild": "^0.11.5",
