--- a/try2-js/package.json
+++ b/try2-js/package.json
@@ -6,5 +6,10 @@
   "dependencies": {
     "esbuild": "^0.11.5",
     "phaser": "^3.54.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.24.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
   }
 }
