Use esbuild alias
We will not use it since eslint do not know it.

--- a/try2-js/package.json
+++ b/try2-js/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "build": "rm -rf public && mkdir public && ./build.sh && npm run build-js",
-    "build-js": "esbuild src/index.js --sourcemap --bundle --outfile=./public/index.js"
+    "build-js-old": "esbuild src/index.js --sourcemap --bundle --outfile=./public/index.js",
+		"build-js": "node ./build.js"
   },
   "dependencies": {
     "esbuild": "^0.11.5",
