Add a eslint section in README.md

--- a/try2-js/package.json
+++ b/try2-js/package.json
@@ -2,7 +2,9 @@
   "scripts": {
     "build": "rm -rf public && mkdir public && ./build.sh && npm run build-js",
     "build-js-old": "esbuild src/index.js --sourcemap --bundle --outfile=./public/index.js",
-		"build-js": "node ./build.js"
+    "build-js": "node ./build.js",
+    "eslint": "eslint --fix src/",
+    "eslint-watch": "esw --fix -w src/"
   },
   "dependencies": {
     "esbuild": "^0.11.5",
@@ -14,6 +16,7 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
+    "eslint-watch": "^7.0.0",
     "prettier": "^2.2.1"
   }
 }
