--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
+  "name": "svelte-app",
+  "version": "1.0.0",
+  "private": true,
   "scripts": {
-    "build": "rm -rf public && mkdir public && ./build.sh && npm run build-js",
-    "build-js-old": "esbuild src/index.js --sourcemap --bundle --outfile=./public/index.js",
-    "build-js": "node ./build.js",
-    "eslint": "eslint --fix src/",
-    "eslint-watch": "esw --fix -w src/"
-  },
-  "dependencies": {
-    "esbuild": "^0.11.5",
-    "phaser": "^3.54.0"
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
+    "start": "sirv public --no-clear"
   },
   "devDependencies": {
-    "eslint": "^7.24.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-watch": "^7.0.0",
-    "prettier": "^2.2.1"
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.0",
+    "rollup": "^2.3.4",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-svelte": "^7.0.0",
+    "rollup-plugin-terser": "^7.0.0",
+    "svelte": "^3.0.0"
+  },
+  "dependencies": {
+    "phaser": "^3.55.2",
+    "sirv-cli": "^1.0.0"
   }
 }
