--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
   "dependencies": {
     "phaser": "^3.55.2",
     "sirv-cli": "^1.0.0",
-    "svelte-navigator": "^3.1.5"
+    "svelte-routing": "^1.6.0"
   }
 }
