--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "phaser": "^3.55.2",
     "sirv-cli": "^1.0.0",
     "svelte-routing": "^1.6.0"
