--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "axios": "^0.21.1",
     "phaser": "^3.55.2",
     "sirv-cli": "^1.0.0",
-    "socket.io": "^4.1.3",
+    "socket.io-client": "^4.1.3",
     "svelte-routing": "^1.6.0"
   }
 }
